# sift

./: .gitignore  LICENSE  Makefile  README.md  com.github.frephs.Sift.json  install_local.py  io.github.frephs.Sift.json  meson.build
.github/workflows/: ci.yml  release.yml
build-aux/: meson_post_install.py
data/: com.github.frephs.Sift.desktop.in  com.github.frephs.Sift.metainfo.xml.in  io.github.frephs.Sift.desktop.in  io.github.frephs.Sift.metainfo.xml.in  meson.build
gnome_sift/: config.py  file_card.py  file_manager.py  gnome-sift.in  main.py  meson.build  style.css  window.py
sift/: __init__.py  config.py  main.py  meson.build  shortcuts.py  sift.in  window.py
